// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffExprManager if we then go back and change the parameters again, the new differential expression data should be loading 1`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
  },
  "type": "diffExpr/loading",
}
`;

exports[`DiffExprManager if we then go back and change the parameters again, the new differential expression data should be loading 2`] = `
Object {
  "payload": Object {
    "cellSets": Object {
      "cellSet": "cluster-869",
      "compareWith": "rest",
    },
    "data": Array [
      Object {
        "gene_names": "A",
        "log2fc": -1.4274754343649423,
        "pval": 1.4969461240347763e-12,
        "qval": 1.647289002209057e-11,
      },
      Object {
        "gene_names": "B",
        "log2fc": -2.4274754343649425,
        "pval": 2.4969461240347763e-12,
        "qval": 2.647289002209057e-11,
      },
      Object {
        "gene_names": "C",
        "log2fc": -3.4274754343649425,
        "pval": 3.4969461240347765e-12,
        "qval": 3.647289002209057e-11,
      },
      Object {
        "gene_names": "D",
        "log2fc": -4.4274754343649425,
        "pval": 4.496946124034777e-12,
        "qval": 4.647289002209057e-11,
      },
      Object {
        "gene_names": "E",
        "log2fc": -5.4274754343649425,
        "pval": 5.4969461240347765e-12,
        "qval": 5.647289002209057e-11,
      },
    ],
    "experimentId": "1234",
    "total": 500,
  },
  "type": "diffExpr/loaded",
}
`;

exports[`DiffExprManager if we then go back and change the parameters again, the new differential expression data should be loading 3`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
  },
  "type": "diffExpr/loading",
}
`;

exports[`DiffExprManager if we then go back and change the parameters again, the new differential expression data should be loading 4`] = `
Object {
  "payload": Object {
    "cellSets": Object {
      "cellSet": "cluster-867",
      "compareWith": "cluster-866",
    },
    "data": Array [
      Object {
        "gene_names": "A",
        "log2fc": -1.4274754343649423,
        "pval": 1.4969461240347763e-12,
        "qval": 1.647289002209057e-11,
      },
      Object {
        "gene_names": "B",
        "log2fc": -2.4274754343649425,
        "pval": 2.4969461240347763e-12,
        "qval": 2.647289002209057e-11,
      },
      Object {
        "gene_names": "C",
        "log2fc": -3.4274754343649425,
        "pval": 3.4969461240347765e-12,
        "qval": 3.647289002209057e-11,
      },
      Object {
        "gene_names": "D",
        "log2fc": -4.4274754343649425,
        "pval": 4.496946124034777e-12,
        "qval": 4.647289002209057e-11,
      },
      Object {
        "gene_names": "E",
        "log2fc": -5.4274754343649425,
        "pval": 5.4969461240347765e-12,
        "qval": 5.647289002209057e-11,
      },
    ],
    "experimentId": "1234",
    "total": 500,
  },
  "type": "diffExpr/loaded",
}
`;

exports[`DiffExprManager on click of compute with changed parameters, DiffExprManager calls the results view and dispatches the appropriate actions 1`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
  },
  "type": "diffExpr/loading",
}
`;

exports[`DiffExprManager on click of compute with changed parameters, DiffExprManager calls the results view and dispatches the appropriate actions 2`] = `
Object {
  "payload": Object {
    "cellSets": Object {
      "cellSet": "cluster-866",
      "compareWith": "rest",
    },
    "data": Array [
      Object {
        "gene_names": "A",
        "log2fc": -1.4274754343649423,
        "pval": 1.4969461240347763e-12,
        "qval": 1.647289002209057e-11,
      },
      Object {
        "gene_names": "B",
        "log2fc": -2.4274754343649425,
        "pval": 2.4969461240347763e-12,
        "qval": 2.647289002209057e-11,
      },
      Object {
        "gene_names": "C",
        "log2fc": -3.4274754343649425,
        "pval": 3.4969461240347765e-12,
        "qval": 3.647289002209057e-11,
      },
      Object {
        "gene_names": "D",
        "log2fc": -4.4274754343649425,
        "pval": 4.496946124034777e-12,
        "qval": 4.647289002209057e-11,
      },
      Object {
        "gene_names": "E",
        "log2fc": -5.4274754343649425,
        "pval": 5.4969461240347765e-12,
        "qval": 5.647289002209057e-11,
      },
    ],
    "experimentId": "1234",
    "total": 500,
  },
  "type": "diffExpr/loaded",
}
`;
